js262/test/language/expressions/object/method-definition/use-strict-with-non-simple-param.js


/*---
esid: sec-method-definitions-static-semantics-early-errors
description: >
  A SyntaxError is thrown if a method contains a non-simple parameter list and a UseStrict directive.
info: |
  Static Semantics: Early Errors

   It is a Syntax Error if ContainsUseStrict of FunctionBody is true and IsSimpleParameterList of StrictFormalParameters is false.
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

var o = {
  m(a = 0) {
    "use strict";
  }
};
